--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tiptap/extension-table-row": "^2.6.6",
     "@tiptap/extension-text-align": "^2.6.6",
     "@tiptap/extension-text-style": "^2.3.1",
+    "@tiptap/extension-typography": "^2.8.0",
     "@tiptap/extension-underline": "^2.6.6",
     "@tiptap/extension-youtube": "^2.6.6",
     "@tiptap/pm": "^2.5.1",
